# parallel-project

./: .gitignore  CMakeLists.txt  cpu_processing.cu  filters.cu  gpu_processing.cu  header.h  job_loader.cu  jobs.txt  main.cu  parallel_project  png_tools.cu  start.sh
